Fix https://issues.apache.org/bugzilla/show_bug.cgi?id=49144 Not an issue but stop FindBugs complaining Also fix one other FindBugs report for this class.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@937302 13f79535-47bb-0310-9956-ffa450edef68